--- a/PCategoria/PCategoria/PCategoria.csproj
+++ b/PCategoria/PCategoria/PCategoria.csproj
@@ -62,6 +62,9 @@
       <Package>mysql-connector-net</Package>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="PSerpisAd">
+      <HintPath>..\..\PSerpisAd\PSerpisAd\bin\Debug\PSerpisAd.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
@@ -76,8 +79,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CategoriaView.cs" />
     <Compile Include="gtk-gui\PCategoria.CategoriaView.cs" />
-    <Compile Include="gtk-gui\PCategoria.App.cs" />
-    <Compile Include="App.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
