--- a/PArticulo/PArticulo/PArticulo.csproj
+++ b/PArticulo/PArticulo/PArticulo.csproj
@@ -57,6 +57,14 @@
       <Package>gtk-sharp-2.0</Package>
     </Reference>
     <Reference Include="Mono.Posix" />
+    <Reference Include="System.Data" />
+    <Reference Include="MySql.Data, Version=6.4.3.0, Culture=neutral, PublicKeyToken=20449f9ba87f7ae2">
+      <Private>False</Private>
+      <Package>mysql-connector-net</Package>
+    </Reference>
+    <Reference Include="PSerpisAd">
+      <HintPath>..\..\PSerpisAd\PSerpisAd\bin\Debug\PSerpisAd.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
@@ -71,4 +79,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\..\PSerpisAd\PSerpisAd\PSerpisAd.csproj">
+      <Project>{CD1DB647-3F7A-4BBA-B86A-08F8E715E924}</Project>
+      <Name>PSerpisAd</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
